增加多种搜索引擎